<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <!-- Заголовок -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/registration_title"
        android:textColor="@color/Text"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- ФИО -->
    <LinearLayout
        android:id="@+id/llFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/tvTitle">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/full_name_label"
            android:textColor="@color/Text"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etFullName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_rounded_containers"
            android:hint="@string/full_name_hint"
            android:padding="8dp"
            android:textColor="@color/Black"
            android:textColorHint="@color/Grey" />
    </LinearLayout>

    <!-- Пол -->
    <LinearLayout
        android:id="@+id/llGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/llFullName">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/gender_label"
            android:textColor="@color/Text"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/rgGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/Text"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/rbFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:buttonTint="@color/Text"
                android:text="@string/female" />
        </RadioGroup>
    </LinearLayout>

    <!-- Курс -->
    <LinearLayout
        android:id="@+id/llCourse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/llGender">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/course_label"
            android:textColor="@color/Text"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spCourse"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/spinner"
            android:spinnerMode="dropdown"
            />
    </LinearLayout>

    <!-- Уровень сложности -->
    <LinearLayout
        android:id="@+id/llDifficulty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/llCourse">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/difficulty_label"
            android:textColor="@color/Text"
            android:textSize="18sp"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/sbDifficulty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp"
            android:max="2"
            android:progress="1"
            android:progressDrawable="@drawable/seekbar_line"
            android:splitTrack="false"
            android:thumb="@drawable/seekbar_thumb" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="10dp"
                android:gravity="start"
                android:text="@string/easy" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/medium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/hard" />
        </LinearLayout>
    </LinearLayout>

    <!-- Дата рождения -->
    <LinearLayout
        android:id="@+id/llBirthDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/llDifficulty">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/birth_date_label"
            android:textColor="@color/Text"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnBirthDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/Text"
            android:textColor="@color/Background"
            android:text="@string/birth_date_hint"
            />
    </LinearLayout>

    <!--    &lt;!&ndash; Знак зодиака &ndash;&gt;-->
    <!--    <LinearLayout-->
    <!--        android:id="@+id/llZodiac"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="16dp"-->
    <!--        android:orientation="vertical"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/llBirthDate">-->

    <!--        <TextView-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_gravity="start"-->
    <!--            android:text="@string/zodiac_label"-->
    <!--            android:textColor="@color/Text"-->
    <!--            android:textSize="18sp"-->
    <!--            android:textStyle="bold" />-->

    <!--        <ImageView-->
    <!--            android:id="@+id/ivZodiac"-->
    <!--            android:layout_width="100dp"-->
    <!--            android:layout_height="100dp"-->
    <!--            android:layout_gravity="center"-->
    <!--            android:layout_marginTop="8dp"-->
    <!--            android:visibility="gone" />-->
    <!--    </LinearLayout>-->

    <!-- Переключатель темы -->
    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="32dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:switchPadding="16dp"
        app:thumbTint="@color/Text"
        app:trackTint="@color/Grey" />

    <!-- Кнопка "Результат" -->
    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Text"
        android:enabled="true"
        android:text="@string/registration_button"
        android:textColor="@color/Background"
        style="@style/Widget.MaterialComponents.Button"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>